--- a/components/SeamanEdit/styles.less
+++ b/components/SeamanEdit/styles.less
@@ -18,12 +18,12 @@
     margin-bottom: 14px;
 }
 
-.avatarUploader {
+.changePhoto {
     margin-bottom: 24px;
 }
 
-.quickStat {
-    &:not(:last-child) {
+.statsInfo {
+    :global(.ant-statistic:not(:last-child)) {
         margin-bottom: 14px;
     }
 
@@ -36,26 +36,12 @@
     margin-bottom: 32px;
 }
 
-.nameStar {
+.star {
     margin-right: 10px;
 }
 
-.statsContainer {
+.stats {
     :global(.ant-col) {
-        margin-bottom: 24px;
-    }
-}
-
-.remarks {
-    margin-top: 14px;
-
-    :global(.ant-list-item) {
-        padding: 0;
-        margin-bottom: 8px;
-        border: 0;
-    }
-
-    :global(.ant-list-item:last-child) {
-        margin-bottom: 0;
+        margin-bottom: 14px;
     }
 }
