Add header active menu

--- a/components/Layout/styles.less
+++ b/components/Layout/styles.less
@@ -44,7 +44,6 @@
 .headerAvatar {
     margin-right: 8px;
     color: #001529;
-    // background: rgba(0,0,0,.08);
 }
 
 .headerDropdown {
@@ -60,6 +59,10 @@
     max-width: 60%;
     margin-left: 20px;
     line-height: 64px;
+
+    :global(.ant-menu-item-selected) {
+        background-color: transparent !important;
+    }
 }
 
 .drawer {
