Fix transform issues

--- a/components/Layout/styles.less
+++ b/components/Layout/styles.less
@@ -44,6 +44,10 @@
 .headerAvatar {
     margin-right: 8px;
     color: #001529;
+
+    :global(.ant-avatar-string) {
+        transform: scale(1) translateX(-50%) !important;
+    }
 }
 
 .headerDropdown {
