--- a/components/Works/styles.less
+++ b/components/Works/styles.less
@@ -19,3 +19,9 @@
     display: inline-block;
     margin: 0 10px;
 }
+
+.vessels {
+    :global(.ant-collapse) {
+        background-color: transparent;
+    }
+}
