--- a/components/Works/styles.less
+++ b/components/Works/styles.less
@@ -24,68 +24,102 @@
     margin: 0 10px;
 }
 
-.vesselsLoading {
+.rankAvatar {
+    background-color: #e8e8e8;
+    color: #222;
+    font-size: 10px;
+
+    :global(.ant-avatar-string) {
+        transform: scale(1) translateX(-50%);
+    }
+}
+
+.vesselsFetching {
     font-size: 36px;
     text-align: center;
 }
 
 .vessels {
-    :global(.ant-collapse) {
+    &:global(.ant-collapse) {
         background-color: transparent;
+
+        > :global(.ant-collapse-item),
+        > :global(.ant-collapse-item:last-child) {
+            margin-bottom: 24px;
+            background-color: #fff;
+            border-radius: 4px;
+            border: 1px solid #e8e8e8;
+            box-shadow: 0 1px 0px rgba(0, 0, 0, 0.15);
+
+            &:global(.ant-collapse-item-active > .ant-collapse-header) {
+                margin-bottom: 16px;
+            }
+
+            > :global(.ant-collapse-header) {
+                display: flex;
+                align-items: center;
+                min-height: 64px;
+                padding: 12px 16px 12px 40px;
+                font-size: 16px;
+
+                > :global(.ant-collapse-extra) {
+                    margin-left: auto;
+                }
+            }
+
+            > :global(.ant-collapse-content .ant-collapse-content-box) {
+                padding-top: 0;
+            }
+        }
     }
 }
 
 .vessel {
-    margin-bottom: 24px;
-    background-color: #fff;
-    border-radius: 4px !important;
-    border: 1px solid #e8e8e8 !important;
-    box-shadow: 0 1px 0px rgba(0, 0, 0, 0.15);
-
-    :global(.ant-collapse-header) {
+    .vesselHeader {
         display: flex;
-        align-items: center;
-        padding: 16px 16px 16px 40px !important;
-        font-size: 16px;
+        width: 100%;
 
-        :global(.ant-collapse-extra) {
-            margin-left: auto;
+        .vesselNum {
+            flex-shrink: 0;
+            display: block;
+            font-size: 14px;
+            width: 24px;
+            height: 24px;
+            margin: 0 10px 0 0;
+            border: 1px solid;
+            text-align: center;
+            background-color: #e6f7ff;
+            border: 1px solid #91d5ff;
+        }
+
+        .vesselName {
+            display: flex;
+            align-items: center;
+            flex-basis: 30%;
+            margin-right: 24px;
+        }
+
+        .vesselOrders {
+            > :global(.ant-avatar) {
+                margin: 4px 4px 4px 0;
+            }
         }
     }
 
-    &:global(.ant-collapse-item-active .ant-collapse-header) {
-        border-bottom: 1px solid #e8e8e8;
-        margin-bottom: 16px;
+    .vesselLoading {
+        font-size: 24px;
+        text-align: center;
     }
 }
 
-.vesselName {
-    flex-basis: 20%;
-}
-
-.vesselPositions {
-    :global(.ant-avatar) {
-        margin-right: 4px;
-        background-color: #e8e8e8;
-        color: #222;
-        font-size: 14px !important;
+.orders {
+    .orderId {
+        white-space: nowrap !important;
     }
 }
 
-.vesselNumber {
-    float: left;
-    display: block;
-    font-size: 14px;
-    width: 24px;
-    height: 24px;
-    margin: 0 10px 0 0;
-    border: 1px solid;
-    line-height: 21px;
-    text-align: center;
-    background-color: #e6f7ff;
-    border: 1px solid #91d5ff;
-}
-
-.vesselFlag {
-    float: right;
+.orderPending {
+    .orderPendingTable {
+        margin: 8px -16px -17px 0;
+    }
 }
