Clean up components

--- a/components/Works/styles.less
+++ b/components/Works/styles.less
@@ -146,4 +146,18 @@
     :global(tr.ant-table-expanded-row td > .ant-table-wrapper) {
         margin: 8px -16px -17px 0;
     }
+
+    :global(.ant-table-row) {
+        &.expiring {
+            background-color: rgba(255, 242, 232, 0.4);
+        }
+
+        &.onboard {
+            background-color: rgba(246, 255, 237, 0.4);
+        }
+
+        &.processing {
+            background-color: rgba(230, 247, 255, 0.4);
+        }
+    }
 }
