Completed BZ Works

--- a/components/Works/styles.less
+++ b/components/Works/styles.less
@@ -1,7 +1,7 @@
 .filters {
     margin-bottom: 36px;
 
-    .bulkOrder {
+    .createOrder {
         margin-top: 4px;
         float: right;
     }
