--- a/components/Layout/styles.less
+++ b/components/Layout/styles.less
@@ -155,5 +155,9 @@
 
 .layout {
     min-height: 100vh;
-    background-color: #f0f2f5;
+	background-color: #f0f2f5;
+
+	:global(.ant-btn-link) {
+		padding: 0;
+	}
 }
