--- a/components/Seaman/styles.less
+++ b/components/Seaman/styles.less
@@ -7,3 +7,57 @@
 .tableAvatar {
     margin-right: 16px;
 }
+
+.pageHeader {
+	.title {
+		color: rgba(0,0,0,.85);
+		font-weight: 500;
+		font-size: 20px;
+		line-height: 28px;
+
+		:global {
+			.ant-tag {
+				margin: 0 0 0 8px;
+			}
+		}
+	}
+
+	.avatar {
+		flex: 0 1 102px;
+
+		:global {
+			.ant-upload-select-picture-card {
+				margin: 0;
+			}
+		}
+	}
+}
+
+@media (min-width: 768px) {
+    .pageHeader {
+        display: flex;
+        align-items: center;
+
+		.mainContent {
+			flex: 1 0 auto;
+			margin-left: 24px;
+		}
+
+		.extraContent {
+			flex: 0 1 auto;
+			margin-left: 48px;
+		}
+    }
+}
+
+@media (max-width: 767px) {
+	.pageHeader {
+		.avatar {
+			margin: 10px 0 20px;
+		}
+
+		.mainContent {
+			margin-bottom: 20px;
+		}
+	}
+}
